fix nav bar on mobile

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -2,16 +2,17 @@
     width: 100vw;
     display: block;
     position: relative;
-    padding: 1em;
+    padding: 0em;
 }
 
 .header {
-    height: 7em;
     display: flex;
-    align-content: flex-end;
-    justify-content: space-around;
-    align-self: center;
     flex-direction: row;
+    flex: 1;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-self: center;
+    height: 7em;
 }
 
 .logoContainer {
@@ -67,6 +68,5 @@ li {
 @media (max-width: 480px) {
     li {
         margin: 0.5em;
-        width: 50px
     }
 }
