--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -48,7 +48,7 @@
 .homeContent {
   display: flex;
   flex: 1;
-  min-width: 330px;
+  max-width: 100vw;
   flex-direction: column;
   justify-content: space-evenly;
   overflow: hidden;
